Se aplica Prettier para un mejor orden y visualizacion del codigo.

--- a/css/login.css
+++ b/css/login.css
@@ -4,36 +4,36 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: rgba(43, 43, 43, 0.486); 
+  background-color: rgba(43, 43, 43, 0.486);
 }
 
 .h2 {
   text-align: center;
   color: #ffffff;
 }
-  
+
 .inputs {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
   box-sizing: border-box;
 }
-  
+
 .btn__submit {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
-  
+
 .btn__submit:hover {
   background-color: #45a049;
 }
-  
+
 p#message {
   text-align: center;
   border-radius: 15px;
